FlexDeploy 7.0/objects/FlexDeploy__c.object
<CustomObject>
   <fields>
      <fullName>Version__c</fullName>
      <formula>SUBSTITUTE(Name, 'FD','')</formula>
      <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
      <label>Version</label>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>User_Type__c</fullName>
      <label>User Type</label>
      <type>Picklist</type>
      <valueSet>
         <restricted>true</restricted>
         <valueSetDefinition>
            <value>
               <fullName>Admin</fullName>
            </value>
            <value>
               <fullName>Flex User</fullName>
            </value>
            <value>
               <fullName>Dev User</fullName>
            </value>
            <value>
               <fullName>Test User 1</fullName>
            </value>
            <value>
               <fullName>Test User 2</fullName>
            </value>
            <value>
               <fullName>MGD User</fullName>
               <isActive>false</isActive>
               <label>MGD User</label>
            </value>
            <value>
               <fullName>Sales User</fullName>
               <isActive>false</isActive>
               <label>Sales User</label>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>Active__c</fullName>
      <defaultValue>false</defaultValue>
      <label>Active</label>
      <type>Checkbox</type>
   </fields>
   <label>FlexDeploy</label>
   <listViews>
      <fullName>All</fullName>
      <columns>NAME</columns>
      <columns>Version__c</columns>
      <filterScope>Everything</filterScope>
      <label>All</label>
   </listViews>
   <nameField>
      <displayFormat>FD7.0.{0}</displayFormat>
      <label>FlexDeploy Code</label>
      <type>AutoNumber</type>
   </nameField>
   <pluralLabel>FlexDeploy</pluralLabel>
   <sharingModel>ReadWrite</sharingModel>
</CustomObject>